--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning React</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div id="root">
-        <h1>
-            Namaste!
-        </h1>
-    </div>
+    <div id="root"></div>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
